Prevent fonts from scaling on mobile when rotating screen
This long national nightmare is over!

https://stackoverflow.com/questions/11165460/responsive-site-is-zoomed-in-when-flipping-between-portrait-and-landscape-on-ipa

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,8 @@
 @import "shared.scss";
 @import "fonts.scss";
 
+$maxWidth: 600px;
+
 * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -20,6 +22,7 @@ body {
   font-weight: 300;
   color: #fff;
   -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
 }
 
 a, a:visited, a:hover, a:active {
@@ -40,7 +43,7 @@ p {
     margin-top: 1rem;
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: $maxWidth) {
     font-size: 12px;
   }
 }
@@ -59,7 +62,7 @@ h1 {
   font-size: 36px;
   font-weight: 900;
 
-  @media (max-width: 600px) {
+  @media (max-width: $maxWidth) {
     font-size: 24px;
   }
 }
@@ -68,7 +71,7 @@ h2 {
   font-size: 30px;
   font-weight: bold;
 
-  @media (max-width: 600px) {
+  @media (max-width: $maxWidth) {
     font-size: 20px;
   }
 }
@@ -77,7 +80,7 @@ h3 {
   font-size: 24px;
   font-weight: bold;
 
-  @media (max-width: 600px) {
+  @media (max-width: $maxWidth) {
     font-size: 18px;
   }
 }
@@ -87,7 +90,7 @@ h4 {
   font-weight: 200;
   line-height: 1.4;
 
-  @media (max-width: 600px) {
+  @media (max-width: $maxWidth) {
     font-size: 16px;
   }
 }
